403 - Create a two-color focus indicator to ensure sufficient contrast with all components (#630)
* Fix border contrast issue

* Remove commented old code

---------

--- a/css/forty_acres.css
+++ b/css/forty_acres.css
@@ -5,8 +5,10 @@
 }
 *:focus,
 .ut-focus {
-  outline: 2px dotted #aeb0b5;
-  outline-offset: 3px;
+  outline: 2px #f9f9f9 solid;
+  outline-offset: 0;
+  -webkit-box-shadow: 0 0 0 4px #193146;
+  box-shadow: 0 0 0 4px #193146;
 }
 #js-nav-toggle,
 .ut-btn--large,
